<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/dashboard">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/baseline_home_24"
                    android:title="@string/home" />
                <item
                    android:id="@+id/nav_business_card"
                    android:icon="@drawable/ic_business_card"
                    android:title="@string/business" />
                <item
                    android:id="@+id/nav_leads"
                    android:icon="@drawable/target"
                    android:title="@string/leads" />
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/baseline_contacts_24"
                    android:title="@string/contacts" />
                <item
                    android:id="@+id/nav_opportunity"
                    android:icon="@drawable/baseline_work_24"
                    android:title="Opportunity" />
                <item
                    android:id="@+id/nav_sales"
                    android:icon="@drawable/sale"
                    android:title="@string/sales" />
            </group>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_coworkers"
                    android:icon="@drawable/baseline_work_24"
                    android:title="@string/coworkers" />
                <item
                    android:id="@+id/nav_sales_forecast"
                    android:icon="@drawable/sale_forecast"
                    android:title="@string/sales_forecast" />
                <item
                    android:id="@+id/nav_reports"
                    android:icon="@drawable/report"
                    android:title="@string/reports" />
            </group>
        </menu>
    </item>
    <item android:title="@string/personal">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_personal"
                    android:icon="@drawable/baseline_communication_alt_24"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/log_out" />
            </group>
        </menu>
    </item>


</menu>